components/output/output.module.scss
@import "../../styles/variables/variables";
@import "../../styles/variables/breakpoints";

//Output has NOT been chosen yet

.searchContainer {
  display: flex;

  overflow: auto;

  &Header {
    margin-bottom: 16px;
    margin-right: 12px;
    width: max-content;
  }

  &DataContainer {
    display: flex;
    flex-direction: column;
    gap: 16px;
  }

  &Data {
    cursor: pointer;

    position: relative;

    $height: 6px;

    &::before {
      content: "";
      position: absolute;
      inset: -$height -32px -$height 0;
      min-height: $height;

      background-color: transparent;
      z-index: 1;
    }
  }

  & > * > * {
    height: 100%;
  }
}

.outputLoader {
  margin: 0 auto;
}

//Output has been chosen by the user

//-------------------------
//Search input
.outputSearchContainer {
  display: flex;
  flex-wrap: wrap;
}

.outputSearch {
  width: fit-content;
  padding: 0 5px;
}

.label {
  display: flex;
  align-items: center;
  height: 100%;
  cursor: pointer;
}

.select {
  display: flex;
  align-items: center;
  text-align: center;
  padding-block: max(20%, 80px);
}

//-------------------------
//Displaying chosen output

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax($grid170, 1fr));
  align-items: stretch;
  justify-items: stretch;
  gap: 6px;

  margin: 5% auto;
  width: 100%;

  & h4 {
    padding-bottom: 2%;
  }

  @media (min-width: $breakpoint515) {
    grid-template-columns: repeat(auto-fit, minmax($grid200, 1fr));
  }

  @media (min-width: $breakpoint600) {
    grid-template-columns: repeat(auto-fit, minmax($grid255, 1fr));
    gap: 8px;
  }

  @media (min-width: $breakpoint900) {
    grid-template-columns: repeat(auto-fit, minmax($grid280, 1fr));
    width: 95%;
  }
}

.optionContainer {
  display: flex;
  flex-direction: column;

  & > :last-child {
    margin-top: auto;
  }
}

//TODO: text-overflow: ellipsis; is not working
.subContainer {
  display: flex;
  gap: 10px;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 10px;
  overflow: hidden;


  & > * {
    text-overflow: ellipsis;
  }

  & > p {
    text-align: end;
  }

  @media (max-width: 550px) {
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 2px;
  }
}

//-------------------------
//Displaying tiles layout

.topSection {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-wrap: wrap;
  padding-bottom: 15px;

  & > h4 {
    overflow: hidden;
    overflow-wrap: break-word;
    hyphens: auto;
  }


  @media (max-width: $breakpoint600) {
    flex-direction: column;
    margin-bottom: 8px;
  }
}

.numberButtons {
  display: flex;
  justify-content: flex-end;
  flex-grow: 1;
  overflow: hidden;

  @media (max-width: $breakpoint600) {
    align-self: flex-end;
  }
}

.toggleContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: -15px; //offsetting padding from the button
}

.outputDeleteOutput {
  align-self: stretch;
  padding: 5px;
  cursor: pointer;
}

